# AKFTP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  touch2.txt
client/: CMakeLists.txt  Client.c  Client.h  client.c  client.h  main.c  old.txt
documentation/: Assignment2.tex
lib/: CMakeLists.txt
server/: CMakeLists.txt  main.c  server.c  server.h
shared/: CMakeLists.txt
shared/include/: CommandHandler.h  Message.h  Token.h  command_handler.h  directory_handling.h  shared.h  token.h
shared/src/: CommandHandler.c  Message.c  Token.c  command_handler.c  directory_handling.c  shared.c  token.c  token.h
